# fastapi-json-schema-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  sample.env
diagrams/: insert-new-pipeline.puml  pipeline.puml
docker-compose/: app.yaml  storages.yaml
src/rest_cli/: constants.py  errors.py  loader.py  main.py  schemas.py  utils.py
src/rest_cli/cli/: __init__.py  models.py  routes.py
src/rest_cli/cli/check/: __init__.py  router.py  schemas.py  validate_function.py
src/rest_cli/services/: __init__.py  root_namer.py
src/rest_cli/templates/: routes.jinja2
src/rest_json_schema/: alembic.ini  docker-entrypoint.sh
src/rest_json_schema/container/: __init__.py  infra.py
src/rest_json_schema/container/creators/: __init__.py  memory.py  sqla.py
src/rest_json_schema/container/providers/: memory.py
src/rest_json_schema/container/providers/sqla/: __init__.py  infra.py  logic.py
src/rest_json_schema/core/: __init__.py  log.py
src/rest_json_schema/core/settings/: __init__.py  _common.py  base.py  db.py  log.py
src/rest_json_schema/domain/: enums.py  errors.py
src/rest_json_schema/domain/entities/: __init__.py  app.py  base.py
src/rest_json_schema/domain/protocols/: schemas.py
src/rest_json_schema/domain/protocols/repositories/: __init__.py  app.py  errors.py
src/rest_json_schema/domain/protocols/uow/: __init__.py  base.py
src/rest_json_schema/domain/values/: base.py
src/rest_json_schema/infra/db/: __init__.py  base.py  init.py  uow.py
src/rest_json_schema/infra/db/models/: __init__.py  app.py  base.py
src/rest_json_schema/infra/mappers/app/: __init__.py  sqla.py
src/rest_json_schema/logic/interactors/: app.py
src/rest_json_schema/migrations/: env.py
src/rest_json_schema/migrations/versions/: 0fff3623ae16_init.py  7db2d414fbf9_init.py
src/rest_json_schema/presentation/api/: asgi.py  main.py
src/rest_json_schema/utils/: wrap_dataclass.py
static/: format.json  format.yaml  specific_format.json
tests/unit/: conftest.py
tests/unit/mocks/: settings.py
tests/unit/presentation/: test_create.py  test_delete.py  test_fetch.py  test_fetch_state.py  test_update_settings.py  test_update_specification.py  test_update_state.py
(+37 files in other folders)
