[project]
name = "rest-json-schema"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "likeinlife", email = "likeinlife@outlook.com" }
]
dependencies = [
    "fastapi>=0.111.1",
    "sqlalchemy>=2.0.31",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "typer>=0.12.3",
    "structlog>=24.2.0",
    "datamodel-code-generator>=0.25.8",
    "dishka>=1.2.0",
    "orjson>=3.10.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
rest-cli = "rest_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "ruff>=0.5.2",
    "mypy>=1.10.1",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rest_json_schema", "src/rest_cli"]

[tool.ruff]
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Allow boolean type in func arguments
    "FBT001",
    # Allow PEP585 annotations like dict[str, str] 
    "FA102",
    # No blankline before class
    "D203",
    # Multiline string summary should start at the first line
    "D213",
    # Allow no-typehints
    "ANN101",
    "ANN102",
    # Disable doc-string rules
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D407",
    "D406",
    # Allow type: ignore
    "PGH003",
    # Useless
    "FBT",
    "FA100",
    "B904",
    "ANN401",
]
exclude = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = []
"tests/**/*.py" = ["D", "S", "ANN", "PLR"]
"**/schemas/**/*.py" = ["ERA001"]

[tool.ruff.lint.isort]
known-first-party = [
    "presentation",
    "core",
    "domain",
    "infra",
    "logic",
    "container",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "normal"

[tool.pytest.ini_options]
pythonpath = "src/rest_json_schema"
testpaths = [
    "tests/unit",
]
